--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "pyzbar==0.1.9",
     "Pillow==11.2.1",
     "protobuf==3.20.0",
-    "beautifulsoup4==4.13.4",
-    "playwright==1.52.0",
+    "anthropic==0.48.0",
+    "instructor[anthropic]==1.8.3",
+    "httpx==0.28.1",
+    "pydantic==2.11.5",
 ]
 
 [build-system]
