--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "instructor[anthropic]==1.8.3",
     "httpx==0.28.1",
     "pydantic==2.11.5",
+    "streamlit==1.45.1",
+    "boto3==1.38.26",
+    "google-auth==2.40.2",
 ]
 
 [build-system]
