Create example .env file

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,32 @@
 # Copy this file to .env and fill in your credentials
 
-# Monarch Money credentials
+# Monarch
 MONARCH_EMAIL=your_email@example.com
-MONARCH_PASSWORD=your_secure_password
-MONARCH_MFA_SECRET=your_mfa_secret_key 
+MONARCH_PASSWORD=yourpassword
+MONARCH_MFA_SECRET=yourmfasecret
+MONARCH_HUMAN_INTEREST_ACCOUNT_ID="123456789012345678"
+MONARCH_ELEVATE_UMB_ACCOUNT_ID="123456789012345678"
+MONARCH_RIPPLING_COMMUTER_ACCOUNT_ID="123456789012345678"
+MONARCH_HUMAN_INTEREST_CATEGORY_ID="123456789012345678"
+MONARCH_ELEVATE_UMB_CATEGORY_ID="123456789012345678"
+MONARCH_RIPPLING_COMMUTER_CATEGORY_ID="123456789012345678"
 
-# Human Interest credentials
+# Human Interest
 HUMAN_INTEREST_EMAIL=your_email@example.com
-HUMAN_INTEREST_PASSWORD=your_secure_password
+HUMAN_INTEREST_PASSWORD=yourpassword
+HUMAN_INTEREST_BASE_URL=https://app.humaninterest.com/account
+HUMAN_INTEREST_TRANSACTIONS_URL=https://app.humaninterest.com/account/activity
+HUMAN_INTEREST_PORTFOLIO_URL=https://app.humaninterest.com/account/portfolio
+
+# Rippling
+RIPPLING_EMAIL=your_email@example.com
+RIPPLING_PASSWORD=yourpassword
+RIPPLING_BASE_URL=https://app.rippling.com
+RIPPLING_HSA_DASHBOARD_URL=https://app.rippling.com/hsa-benefits/employee/dashboard/overview
+RIPPLING_HSA_TRANSACTIONS_URL=https://rippling.elevateaccounts.com/dashboard/my-accounts/2409200
+RIPPLING_HSA_PORTFOLIO_URL="https://rippling.elevateaccounts.com/investments?id=2409200"
+RIPPLING_COMMUTER_BENEFITS_URL=https://rippling.elevateaccounts.com/dashboard/my-accounts/2446838
+RIPPLING_MFA_SECRET=yourmfasecret
+
+# Computer use
+ANTHROPIC_API_KEY=sk-ant-putyourkeyhere
