--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,7 @@ human_interest_screenshots/
 automation_outputs/
 automation_screenshots/
 monarch_accounts.json
+monarch_categories.json
 
 # Cursor
 .cursorignore
