Add employer name to README and .env.example

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ RIPPLING_MFA_SECRET=yourmfasecret
 
 # Computer use
 ANTHROPIC_API_KEY=sk-ant-putyourkeyhere
+
+# Other
+EMPLOYER_NAME=your_employer_name
