Log all the container output to a file instead of in the terminal

--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,7 @@ human_interest_outputs/
 human_interest_screenshots/
 automation_outputs/
 automation_screenshots/
+automation_logs/
 monarch_accounts.json
 monarch_categories.json
 
